cmake_minimum_required(VERSION 3.26)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 17)

add_executable(Problem_Solving
        #2023-08-20
        #배열: BOJ10808.cpp BOJ10807.cpp BOJ11328.cpp
        #연결리스트: BOJ1406.cpp BOJ1158.cpp BOJ5397.cpp
        #스택: BOJ10828.cpp BOJ10773.cpp
        #큐: BOJ18258.cpp BOJ10845.cpp BOJ2164.cpp
        #덱: BOJ10866.cpp BOJ1021.cpp
        BOJ11003.cpp)
