cmake_minimum_required(VERSION 3.26)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 17)

add_executable(Problem_Solving
        #2023-08-20
        #배열: BOJ10808.cpp BOJ10807.cpp BOJ11328.cpp
        #연결리스트: BOJ1406.cpp BOJ1158.cpp BOJ5397.cpp
        #스택: BOJ10828.cpp BOJ10773.cpp
        #큐: BOJ18258.cpp BOJ10845.cpp BOJ2164.cpp
        #덱: BOJ10866.cpp BOJ1021.cpp  미결-BOJ11003.cpp
        #2023-08-21
        #복습: BOJ13300.cpp BOJ1475.cpp
        #스택활용_괄호쌍: BOJ4949.cpp *BOJ10799.cpp *BOJ2504.cpp BOJ2504_sol.cpp
        #BFS: BOJ1926.cpp BOJ2178.cpp BOJ7576.cpp
        #2023-08-22
        #복습 BOJ3986.cpp 미결-BOJ5430.cpp
        #BFS: BOJ4179.cpp BOJ1697.cpp BOJ10026.cpp
        #재귀: BOJ1629.cpp BOJ11729.cpp
        BOJ1074.cpp)
