cmake_minimum_required(VERSION 3.26)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 17)

add_executable(Problem_Solving
        #2023-08-20
        #배열: BOJ10808.cpp BOJ10807.cpp BOJ11328.cpp
        #연결리스트: BOJ1406.cpp BOJ1158.cpp BOJ5397.cpp
        #스택: BOJ10828.cpp BOJ10773.cpp
        #큐: BOJ18258.cpp BOJ10845.cpp BOJ2164.cpp
        #덱: BOJ10866.cpp BOJ1021.cpp  미결-BOJ11003.cpp
        #2023-08-21
        #복습: BOJ13300.cpp BOJ1475.cpp
        #스택활용_괄호쌍: BOJ4949.cpp *BOJ10799.cpp *BOJ2504.cpp BOJ2504_sol.cpp
        #BFS: BOJ1926.cpp BOJ2178.cpp BOJ7576.cpp
        #2023-08-22
        #복습 BOJ3986.cpp 미결-BOJ5430.cpp
        #BFS: BOJ4179.cpp BOJ1697.cpp BOJ10026.cpp
        #재귀: BOJ1629.cpp BOJ11729.cpp BOJ1074.cpp
        #2023-08-23
        #복습: BOJ1012.cpp 미결-BOJ14956.cpp
        #티어용: BOJ1978.cpp BOJ1874.cpp BOJ1929.cpp 미결-BOJ1654.cpp
        #       BOJ2751.cpp BOJ9012.cpp BOJ1546.cpp BOJ10814.cpp(튜플씀) BOJ4153.cpp BOJ10989.cpp
        #2023-08-24
        #미결-BOJ11967.cpp
        #2023-08-25
        #미결-BOJ4889.cpp
        #2023-08-26
        #백트래킹-N과 M: BOJ15649.cpp BOJ15650.cpp
        #       BOJ9663.cpp BOJ1182.cpp
        #2023-08-28
        #next_permutation: BOJ15649_1.cpp
        #2023-08-29
        #next_permutation: BOJ15650_1.cpp BOJ15654_1.cpp
        #N과 M: BOJ15651.cpp BOJ15652.cpp BOJ15654.cpp BOJ15655.cpp BOJ15656.cpp
        #정렬: BOJ11728.cpp
        #2023-08-30
        #N과 M: BOJ15657.cpp BOJ15663.cpp
        #BFS BOJ13549.cpp
        #BOJ1003.cpp BOJ1463.cpp BOJ1764.cpp BOJ7569.cpp BOJ1620.cpp BOJ14940.cpp
        #2023-08-31
        #미결- BOJ6064.cpp
        #BOJ15664.cpp BOJ9095.cpp BOJ11723.cpp BOJ11726.cpp BOJ11727.cpp BOJ17219.cpp BOJ18870.cpp BOJ2667.cpp BOJ11047.cpp
        #2023-09-01
        #BOJ11399.cpp
        #2023-09-02
        #BOJ1920.cpp
        #2023-09-03
        #BOJ5597.cpp
        #BOJ15683.cpp-미결
        #2023-09-04
        #BOJ7562.cpp
        #2023-09-05
        #BOJ2577.cpp
        #2023-09-06
        #BOJ2493.cpp
        #2023-09-07
        #BOJ3273.cpp BOJ1919.cpp BOJ17478.cpp BOJ6603.cpp BOJ2583.cpp BOJ2562.cpp
        #2023-09-08
        #BOJ2447.cpp BOJ2630.cpp
        #2023-09-09
        #BOJ5014.cpp BOJ1759.cpp BOJ16953.cpp BOJ16953.cpp
        #2023-09-10
        #BOJ2446.cpp BOJ15686.cpp BOJ15686-1.cpp
        #2023-09-11
        #별찍기-BOJ2444.cpp BOJ2445.cpp BOJ2443.cpp BOJ2442.cpp BOJ2441.cpp BOJ2440.cpp
        #BOJ11650.cpp BOJ2750.cpp BOJ11651.cpp BOJ11931.cpp BOJ15688.cpp
        #2023-09-12
        #BOJ1431.cpp
        BOJ11652.cpp
)
